objects/Credit_Card__c.object
<CustomObject>
    <description>A credit card or payment authorization</description>
    <fields>
        <fullName>Above_Warning_Level__c</fullName>
        <formula>Available_Credit_Percentage__c   &lt;=  Balance_Limit_Warning_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzAbove Warning Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Limit_Warning_Days__c</fullName>
        <formula>IF(ISBLANK( Override_Age_Limit_Warning_Days__c),
	Payment_Account__r.Age_Limit_Warning_Days__c, 
	Override_Age_Limit_Warning_Days__c
)</formula>
        <label>zzzAge Limit Warning Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Cleared__c</fullName>
        <inlineHelpText>Total of amounts included in Expense reports over the life of the card</inlineHelpText>
        <label>zzzAmount Cleared</label>
        <summarizedField>Credit_Card_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Credit_Card_Transaction__c.Cleared__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Card_Transaction__c.Credit_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Used__c</fullName>
        <inlineHelpText>Total Amount Authorized or Posted over the life of the card</inlineHelpText>
        <label>zzzAmount Used</label>
        <summarizedField>Credit_Card_Transaction__c.Amount__c</summarizedField>
        <summaryForeignKey>Credit_Card_Transaction__c.Credit_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_Credit_Percentage__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>if(Card_Limit__c &gt; 0 , Available_Credit__c/Card_Limit__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percent of Available Balance to Card Limit</inlineHelpText>
        <label>zzzAvailable Credit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Available_Credit__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>Card_Limit__c - Card_Balance__c</formula>
        <inlineHelpText>Limit minus Outstanding Balance</inlineHelpText>
        <label>zzzAvailable Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Limit_Warning_Level__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>IF(
	OR(
		ISNULL(Override_Balance_Limit_Warning_Level__c), 
		ISBLANK(Override_Balance_Limit_Warning_Level__c)
	),
	Payment_Account__r.Balance_Limit_Warning_Level__c, 
	Override_Balance_Limit_Warning_Level__c
)</formula>
        <inlineHelpText>Warning email sent to Card Owner if percent of available balance is below warning limit</inlineHelpText>
        <label>zzzBalance Limit Warning Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Card_Agreement_Signed__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Date that the Card Agreement form was signed</inlineHelpText>
        <label>zzzCard Agreement Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Agreement__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Link to the Agreement signed by the card holder</inlineHelpText>
        <label>zzzCard Agreement</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Card_Balance__c</fullName>
        <formula>Amount_Used__c  -  Amount_Cleared__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Posted and Pending transactions that have not been cleared on an Expense report</inlineHelpText>
        <label>zzzCard Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Card_Counter__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>RIGHT((&quot;0000&quot; + TEXT(Payment_Account__r.Card_Count__c)), 4)</formula>
        <label>Card Counter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Deactivation_Reason__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Card Deactivation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Deactivation_Status__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Card Deactivation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Employee_Number__c</fullName>
        <label>Card Employee Number</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Card_Expiration__c</fullName>
        <description>cardExpiration field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Card Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Email__c</fullName>
        <label>Card Holder Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Card_Holder_First_Name__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>Payment_Account__r.First_Name_On_Card__c</formula>
        <inlineHelpText>First Name On Card from Portfolio</inlineHelpText>
        <label>Card Holder First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Last_Name__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>Payment_Account__r.Last_Name_On_Card__c</formula>
        <inlineHelpText>Last Name On Card from Portfolio</inlineHelpText>
        <label>Card Holder Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Phone__c</fullName>
        <formula>Payment_Account__r.Card_Holder__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Holder Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Limit__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Total spending limit</inlineHelpText>
        <label>zzzCard Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <description>Used to store the encrypted card number in a plain text field so it can be used in formulas, etc</description>
        <label>Card Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Owner__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>Payment_Account__r.Card_Holder_First_Name__c + &apos; &apos; + Payment_Account__r.Card_Holder_Last_Name__c</formula>
        <inlineHelpText>Owner of Payment Account for this Card</inlineHelpText>
        <label>Card Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Card Requested By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Cards</relationshipLabel>
        <relationshipName>Credit_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Set_Up_Response_Message__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Card Set Up Response Message</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Set_Up_Response__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Card Set Up Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Card_Set_up_Status__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Card Set up Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activation Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Status_Code__c</fullName>
        <description>cardStatus
        
Origin: CR-2089 - CreditCardAdmin</description>
        <formula>CASE(Status__c,
&quot;Active&quot;, &quot;A&quot;,
&quot;Blocked&quot;, &quot;B&quot;,
&quot;Clear&quot;, &quot;C&quot;,
&quot;B&quot;)</formula>
        <inlineHelpText>A = Active
B = Blocked (default)</inlineHelpText>
        <label>Card Status Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Vendor__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Card Issuer</inlineHelpText>
        <label>Card Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>BMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comdata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cardholder_ID__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>Payment_Account__r.Card_Holder__c</formula>
        <label>Cardholder ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comdata_Status__c</fullName>
        <label>Comdata Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Credit Card Number</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Security_Code__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Credit Card Security Code</label>
        <length>3</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Current_Days_over_Threshold_Limit__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzCurrent Days over Threshold Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Usage_Percentage__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>if(Card_Limit__c &gt; 0, (Card_Balance__c)  /  Card_Limit__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Outstanding Balance and Pending Transactions as a percentage of Card Limit</inlineHelpText>
        <label>zzzCurrent Usage Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cycle_Type__c</fullName>
        <formula>LEFT(TEXT(Payment_Account__r.Advisory_Profile__r.Provider_Profile__r.Cycle_Type__c),1)</formula>
        <inlineHelpText>Card Cycle Type for Card Limits calculation</inlineHelpText>
        <label>Cycle Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Card_Statement__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Updated for CR-6666</description>
        <inlineHelpText>When checked, no weekly statement will be sent for this card.</inlineHelpText>
        <label>Do Not Send Card Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Employee Finance Code Id</inlineHelpText>
        <label>zzzEmployee Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Sync__c</fullName>
        <formula>IF(
	OR(
		AND(
			ISPICKVAL(Status__c, &apos;Active&apos;),
			ISPICKVAL(Comdata_Status__c, &apos;A&apos;)
		),
		AND(
			OR(
				ISPICKVAL(Comdata_Status__c, &apos;B&apos;),
				ISPICKVAL(Comdata_Status__c, &apos;C&apos;),
				ISPICKVAL(Comdata_Status__c, &apos;F&apos;),
				ISPICKVAL(Comdata_Status__c, &apos;L&apos;),
				ISPICKVAL(Comdata_Status__c, &apos;S&apos;)
			),
			OR(
				ISPICKVAL(Status__c, &apos;Inactive&apos;),
				ISPICKVAL(Status__c, &apos;Deactivated&apos;)
			)
		)
	),
	IMAGE(&apos;/resource/1415977293000/correct&apos;, &apos;In Sync&apos;),
	IMAGE(&apos;/resource/1415977293000/wrong&apos;, &apos;Not In Sync&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Sync?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Purchasing_Allowed__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>IF(ISPICKVAL(Override_Intl_Purchasing_Allowed__c,&apos;&apos;),
Payment_Account__r.International_Purchasing_Allowed__c,
true		
)</formula>
        <label>zzzInternational Purchasing Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internet_Purchasing_Allowed__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>IF(ISPICKVAL(Override_Internet_Purchasing_Allowed__c,&apos;&apos;), 
Payment_Account__r.Internet_Purchasing_Allowed__c,
true		
)</formula>
        <label>zzzInternet Purchasing Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Cycle_Amount__c</fullName>
        <description>Comdata API - Max Cycle Amount - 
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <formula>Amount_Cleared__c  +  Card_Limit__c</formula>
        <inlineHelpText>Total Amount that can be placed on the card, or total of Card Limit plus Amount Cleared (by Expense report).  This is updated as more credit is used.</inlineHelpText>
        <label>zzzMax Cycle Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Per_Day__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>IF(NOT(ISBLANK(Override_Max_Per_Day__c)), 
MIN(Override_Max_Per_Day__c,Card_Limit__c), 
MIN(Payment_Account__r.Max_Per_Day__c,Card_Limit__c) 
)</formula>
        <inlineHelpText>Maximum amount that can be charged per day. Value can be overridden at the Credit Card level or inherited from the value on the Portfolio. The value cannot be higher than the card limit.</inlineHelpText>
        <label>zzzMax Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Per_Transaction__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>IF(NOT(ISBLANK(Override_Max_Per_Transaction__c)),
  MIN(Override_Max_Per_Transaction__c,Card_Limit__c),
  MIN(Payment_Account__r.Max_Per_Transaction__c,Card_Limit__c)
)</formula>
        <inlineHelpText>Maximum amount that can be charged per transaction.  Value can be overridden at the Credit Card level or inherited from the value on the Portfolio.  The value cannot be higher than the card limit.</inlineHelpText>
        <label>zzzMax Per Transaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Successive_Days_over_Threshold_limit__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzMax Succ Days over Threshold limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Transactions_Per_Cycle__c</fullName>
        <formula>IF(ISBLANK(Override_Max_Transactions_Per_Cycle__c),
	Payment_Account__r.Max_Transactions_Per_Cycle__c, 
	Override_Max_Transactions_Per_Cycle__c
)</formula>
        <label>zzzMax Transactions Per Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Transactions_Per_Day__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>IF(
	OR(
		ISNULL( Override_Max_Transactions_Per_Day__c),
		ISBLANK( Override_Max_Transactions_Per_Day__c)
	),
	Payment_Account__r.Max_Transactions_Per_Day__c , 
	Override_Max_Transactions_Per_Day__c
)</formula>
        <label>zzzMax Transactions Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oldest_Open_Transaction__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Oldest non-cleared transaction</inlineHelpText>
        <label>zzzOldest Open Transaction</label>
        <summarizedField>Credit_Card_Transaction__c.Transaction_Date_Time__c</summarizedField>
        <summaryFilterItems>
            <field>Credit_Card_Transaction__c.Cleared__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Credit_Card_Transaction__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Posted, Credit</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Card_Transaction__c.Credit_Card__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_Time_Use_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Credit Balance is not replenished once used</inlineHelpText>
        <label>One Time Use Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Close_Flag__c</fullName>
        <formula>LEFT(TEXT(Payment_Account__r.Portfolio_Profile__r.Open_Close_Flag__c),1)</formula>
        <inlineHelpText>for Card Limits Profile</inlineHelpText>
        <label>zzzOpen/Close Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Link to the originating request ticket</inlineHelpText>
        <label>Original Request</label>
        <referenceTo>OSR__c</referenceTo>
        <relationshipLabel>Credit Cards</relationshipLabel>
        <relationshipName>Credit_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Over_Credit_Limit_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Over Credit Limit Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Age_Limit_Warning_Days__c</fullName>
        <label>zzzOverride Age Limit Warning Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Balance_Limit_Warning_Level__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzOverride Balance Limit Warning Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Override_Card_Limit__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzOverride Card Limit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Internet_Purchasing_Allowed__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzOverride Internet Purchasing Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Intl_Purchasing_Allowed__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzOverride Intl Purchasing Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Max_Cycle_Amount__c</fullName>
        <description>Overrides a value in the Max Cycle Amount, which is used for the Card Limit field
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzOverride Max Cycle Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Max_Per_Day__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzOverride Max Per Day</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Max_Per_Transaction__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzOverride Max Per Transaction</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Max_Transaction_Age__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzOverride Max Transaction Age</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Max_Transactions_Per_Cycle__c</fullName>
        <label>zzzOverride Max Transactions Per Cycle</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Max_Transactions_Per_Day__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzOverride Max Transactions Per Day</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Account__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Portfolio</label>
        <referenceTo>Portfolio__c</referenceTo>
        <relationshipLabel>Credit Cards</relationshipLabel>
        <relationshipName>Credit_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pending_Transactions__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.</description>
        <inlineHelpText>Transactions that have been Pre-authorized but not yet posted</inlineHelpText>
        <label>zzzPending Transactions</label>
        <summarizedField>Credit_Card_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Credit_Card_Transaction__c.Closed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Card_Transaction__c.Credit_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Portfolio_Status__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>TEXT(Payment_Account__r.Portfolio_Status__c)</formula>
        <inlineHelpText>Status of Payment Account for this Card</inlineHelpText>
        <label>zzzPortfolio Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Available_Flag__c</fullName>
        <formula>TEXT(Payment_Account__r.Advisory_Profile__r.Provider_Profile__r.Product_Available_Flag__c)</formula>
        <inlineHelpText>Product Available Flag for Card Limit Profile</inlineHelpText>
        <label>Product Available Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Payment_Account__r.Advisory_Profile__r.Provider_Profile__r.Product_Code__c</formula>
        <inlineHelpText>Product Code for Card Profile Limit</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Status__c</fullName>
        <label>Security Status</label>
        <picklist>
            <picklistValues>
                <fullName>911</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-time use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Warning_Limit_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to identify if warning notification need to be sent.
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzSend Warning Limit Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Advisory Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Days_Over_Threshold_Amount__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzTotal Days Over Threshold Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Over_Threshold_Limit__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>zzzTotal Days Over Threshold Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Age_Days__c</fullName>
        <label>zzzTransaction Age (Days)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Age_Limit__c</fullName>
        <formula>IF(ISBLANK(Override_Max_Transaction_Age__c), 
Payment_Account__r.Transaction_Age_Limit__c, 
Override_Max_Transaction_Age__c)</formula>
        <label>zzzTransaction Age Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uncleared_Transaction_Count__c</fullName>
        <description>Used in Batch_CardStatement to determine which cards have transactions yet to be expensed. CR-20140303-4689</description>
        <inlineHelpText>Number of transactions not yet Cleared on an Expense Report.</inlineHelpText>
        <label>zzzUncleared Transaction Count</label>
        <summaryFilterItems>
            <field>Credit_Card_Transaction__c.Cleared__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Card_Transaction__c.Credit_Card__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Update_Billing_Address_On_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Billing Address On Activation</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Card</label>
    <listViews>
        <fullName>Active_Cards</fullName>
        <columns>NAME</columns>
        <columns>Card_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Comdata_Status__c</columns>
        <columns>Card_Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Cards</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Cards</fullName>
        <columns>NAME</columns>
        <columns>Card_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Comdata_Status__c</columns>
        <columns>Card_Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cards</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Blocked</fullName>
        <columns>NAME</columns>
        <columns>Card_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Comdata_Status__c</columns>
        <columns>Card_Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Blocked</value>
        </filters>
        <label>Blocked</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deactivated</fullName>
        <columns>NAME</columns>
        <columns>Card_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Comdata_Status__c</columns>
        <columns>Card_Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deactivated</value>
        </filters>
        <label>Deactivated</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deactivated_Over_Credit_Limit</fullName>
        <columns>NAME</columns>
        <columns>Card_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Comdata_Status__c</columns>
        <columns>Card_Expiration__c</columns>
        <columns>Card_Deactivation_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Card_Deactivation_Reason__c</field>
            <operation>equals</operation>
            <value>Over Credit Limit</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deactivated</value>
        </filters>
        <label>Deactivated - Over Credit Limit</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deactivated_Over_Trans_Age_Limit</fullName>
        <columns>NAME</columns>
        <columns>Card_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Comdata_Status__c</columns>
        <columns>Card_Expiration__c</columns>
        <columns>Card_Deactivation_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deactivated</value>
        </filters>
        <filters>
            <field>Card_Deactivation_Reason__c</field>
            <operation>contains</operation>
            <value>Over Transaction Age Limit</value>
        </filters>
        <label>Deactivated - Over Trans Age Limit</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
</CustomObject>